sumo/tests/duarouter/alternatives/style1_input/errors/routealt/routealt_id_empty/errors.duarouter
Error: Missing id of a 'routealt'-object.
Quitting (on error).
